[package]
name = "brb_membership"
version = "1.0.11"
description = "BRB Membership: Enables nodes to dynamically join and leave a BRB voting group"
authors = [ "David Rusu <davidrusu.me@gmail.com>" ]
license = "MIT OR BSD-3-Clause"
repository = "https://github.com/maidsafe/brb_membership"
edition = "2021"

[dependencies]
rand = "0.7.3"
serde = "1.0"
bincode = "1.2.1"
hex = "0.4.2"
thiserror = "1.0"
log = "0.4.13"
blsttc = "3.4.0"
quickcheck = "1"
quickcheck_macros = "1"

[dev-dependencies]
eyre = "0.6.5"
