[package]
name = "brb_membership"
version = "1.0.11"
description = "BRB Membership: Enables nodes to dynamically join and leave a BRB voting group"
authors = [ "David Rusu <davidrusu.me@gmail.com>" ]
license = "MIT OR BSD-3-Clause"
repository = "https://github.com/maidsafe/brb_membership"
edition = "2021"

[dependencies]
crdts = "5.0.0"
rand = "0.7.3"
serde = "1.0.106"
bincode = "1.2.1"
hex = "0.4.2"
thiserror = "1.0"
signature = "1.3.0"
log = "0.4.13"

  [dependencies.ed25519]
  version = "1.0.0"
  package = "ed25519-dalek"
  features = [ "serde" ]

[dev-dependencies]
eyre = "0.6.5"
