[package]
name = "brb_membership"
version = "1.4.0"
description = "BRB Membership: Enables nodes to dynamically join and leave a BRB voting group"
authors = [ "David Rusu <davidrusu.me@gmail.com>" ]
license = "BSD-3-Clause"
repository = "https://github.com/maidsafe/brb_membership"
edition = "2021"

[dependencies]
rand = "0.7.3"
bincode = "1.2.1"
hex = "0.4.2"
thiserror = "1.0"
signature = "1.3.0"
log = "0.4.13"

  [dependencies.serde]
  version = "1"
  features = [ "derive" ]

  [dependencies.blsttc]
  version = "3.4.0"
  optional = true

  [dependencies.ed25519]
  version = "1.0.0"
  package = "ed25519-dalek"
  features = [ "serde" ]
  optional = true

[features]
default = [ "blsttc" ]
bad_crypto = [ ]

[profile.test]
opt-level = 3
debug = true
overflow-checks = true

[profile.bench]
debug = true

[profile.release]
debug = true

[dev-dependencies]
eyre = "0.6.5"
quickcheck = "1"
quickcheck_macros = "1"
